--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     }
   ],
   "require": {
-    "php": ">=7.0.22",
-    "illuminate/framework": "~5.5.0",
+    "php": ">=7.0.0",
+    "laravel/framework": "~5.5.0",
     "ramsey/uuid": "^3.6"
   },
   "autoload": {
