--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,11 @@
         "Doorman": "Clarkeash\\Doorman\\Facades\\Doorman"
       }
     }
+  },
+  "config": {
+    "preferred-install": "dist",
+    "platform": {
+      "php": "7.0"
+    }
   }
 }
