--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ before_install:
 install:
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
 
-script: vendor/bin/phpunit
+script:
+  - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
