change version requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: php
 
-php:
-  - 7.1.3
-  - 7.2
+matrix:
+  include:
+  - php: 7.1
+    env: ILLUMINATE_MINOR_VERSION=6
+  - php: 7.2
+    env: ILLUMINATE_MINOR_VERSION=6
+  - php: 7.1
+    env: ILLUMINATE_MINOR_VERSION=7
+  - php: 7.2
+    env: ILLUMINATE_MINOR_VERSION=7
 
 cache:
   directories:
@@ -10,9 +17,11 @@ cache:
 
 before_install:
   - travis_retry composer self-update
+  - composer require "laravel/framework:5.${ILLUMINATE_MINOR_VERSION}.*" --no-update
+  - composer require "orchestra/testbench:3.${ILLUMINATE_MINOR_VERSION}.*" --no-update
 
 install:
-  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+  - travis_retry composer update --prefer-source --no-interaction --no-suggest
 
 script:
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
