--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=7.1.3",
-    "laravel/framework": "~5.6.0",
+    "laravel/framework": "^5.6",
     "ramsey/uuid": "^3.6"
   },
   "autoload": {
@@ -25,7 +25,8 @@
   },
   "require-dev": {
     "orchestra/testbench": "^3.6",
-    "phpunit/phpunit": "^7.0"
+    "phpunit/phpunit": "^7.0",
+    "mockery/mockery": "^1.2"
   },
   "extra": {
     "laravel": {
