--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ matrix:
     env: ILLUMINATE_MINOR_VERSION=6
   - php: 7.2
     env: ILLUMINATE_MINOR_VERSION=6
+  - php: 7.3
+    env: ILLUMINATE_MINOR_VERSION=6
   - php: 7.1
     env: ILLUMINATE_MINOR_VERSION=7
   - php: 7.2
+    env: ILLUMINATE_MINOR_VERSION=7
+  - php: 7.3
     env: ILLUMINATE_MINOR_VERSION=7
 
 cache:
