--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=7.1.3",
-    "laravel/framework": "^5.6",
+    "laravel/framework": "~5.6.0|~5.7.0|~5.8.0|^6.0",
     "ramsey/uuid": "^3.6"
   },
   "autoload": {
