--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     }
   ],
   "require": {
-    "php": ">=7.1.3",
-    "laravel/framework": "^5.6",
+    "php": "^7.2",
+    "laravel/framework": "^6.0",
     "ramsey/uuid": "^3.6"
   },
   "autoload": {
@@ -24,8 +24,8 @@
     }
   },
   "require-dev": {
-    "orchestra/testbench": "^3.6",
-    "phpunit/phpunit": "^7.0",
+    "orchestra/testbench": "^4.0",
+    "phpunit/phpunit": "^8.0",
     "mockery/mockery": "^1.2"
   },
   "extra": {
@@ -39,9 +39,6 @@
     }
   },
   "config": {
-    "preferred-install": "dist",
-    "platform": {
-      "php": "7.1.3"
-    }
+    "preferred-install": "dist"
   }
 }
