--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,13 +12,13 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   tests:
-    # The type of runner that the job will run on
-    runs-on: [ubuntu-latest, windows-latest]
-
     strategy:
       matrix:
+        platform: [ubuntu-latest, windows-latest]
         php: [7.2, 7.3, 7.4]
         stability: [prefer-lowest, prefer-stable]
+
+    runs-on: ${{ matrix.platform }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,7 +29,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.composer/cache/files
-          key: ${{ runner.os }}-dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
+          key: ${{ matrix.platform }}-dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
