--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": "^7.3",
     "laravel/framework": "^8.0",
-    "ramsey/uuid": "^3.6|^4.0"
+    "ramsey/uuid": "^4.0"
   },
   "autoload": {
     "psr-4": {
