update for php8
overall composer update using latest composer v2

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.3|^8.0",
     "laravel/framework": "^8.0",
     "ramsey/uuid": "^4.0"
   },
