--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": "^7.3|^8.0",
-    "laravel/framework": "^8.0",
+    "laravel/framework": "^9.0",
     "ramsey/uuid": "^4.0"
   },
   "autoload": {
@@ -24,7 +24,7 @@
     }
   },
   "require-dev": {
-    "orchestra/testbench": "^6.0",
+    "orchestra/testbench": "^6.0|^7.0",
     "phpunit/phpunit": "^9.3",
     "mockery/mockery": "^1.4"
   },
@@ -40,5 +40,7 @@
   },
   "config": {
     "preferred-install": "dist"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
