Remove old versions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,19 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.3, 7.4, 8.0, 8.1]
-        laravel: [8.*, 9.*]
+        php: [8.0, 8.1]
         stability: [prefer-lowest, prefer-stable]
-        include:
-          - laravel: 9.*
-            testbench: 7.*
-          - laravel: 8.*
-            testbench: ^6.23
-        exclude:
-          - laravel: 9.*
-            php: 7.4
-          - laravel: 9.*
-            php: 7.3
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -51,9 +40,7 @@ jobs:
           coverage: xdebug
 
       - name: Install dependencies
-        run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+        run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
