--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [8.0, 8.1]
+        php: [8.1]
         stability: [prefer-lowest, prefer-stable]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
